--- a/project/sass/styles.sass
+++ b/project/sass/styles.sass
@@ -1,2 +1,10 @@
+// Lib
 @import 'lib/_variables.sass'
-@import './_tables.sass'
+
+// Base
+@import 'base/_normalize.scss'
+@import 'base/_typography.sass'
+
+// Components
+@import 'components/_buttons.sass'
+@import 'components/_tables.sass'
