--- a/project/css/styles.css
+++ b/project/css/styles.css
@@ -1,4 +1,16 @@
 /*---------- $COLORS ----------*/
 /* Branding colors */
+.btn {
+  display: inline-block;
+  color: white;
+  background-color: #ea83ee;
+  line-height: 2.5;
+  border-radius: 3px;
+  font-size: 24px; }
+  .btn .btn__icon {
+    font-size: .6em; }
+  .btn .btn--info {
+    background-color: #42b8dd; }
+
 table tr:hover {
   background-color: #dbd879; }
