--- a/project/css/styles.css
+++ b/project/css/styles.css
@@ -14,3 +14,10 @@
 
 table tr:hover {
   background-color: #dbd879; }
+
+section {
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #bfbfbf;
+  padding: 24px; }
