--- a/project/sass/styles.sass
+++ b/project/sass/styles.sass
@@ -1,5 +1,7 @@
 // Lib
 @import 'lib/_variables.sass'
+@import 'lib/_mixins.sass'
+@import 'lib/_animations.sass'
 
 // Base
 @import 'base/_normalize.scss'
@@ -8,3 +10,6 @@
 // Components
 @import 'components/_buttons.sass'
 @import 'components/_tables.sass'
+
+// Layout
+@import 'layout/global.sass'
