--- a/project/sass/layout/global.sass
+++ b/project/sass/layout/global.sass
@@ -1,4 +1,6 @@
 section
     @include max-width
+    @include respond-to(800px)
+        background-color: red
     background-color: $color-lightgrey
     padding: $padding
