--- a/project/sass/lib/_mixins.sass
+++ b/project/sass/lib/_mixins.sass
@@ -1,4 +1,8 @@
-@mixin max-width
-    max-width: 800px
+@mixin max-width($maxwidth: 800px)
+    max-width: $maxwidth
     margin-left: auto
     margin-right: auto
+
+@mixin respond-to($width)
+    @media only screen and (min-width: $width)
+        @content
