--- a/project/sass/lib/_variables.sass
+++ b/project/sass/lib/_variables.sass
@@ -27,7 +27,17 @@ $buttonbackgroundcolor: $color-brand
 $buttonfontsize: $basefontsize * 1.5
 
 
+// Spaciados
+$spacing-xs : 8px
+$spacing-sm : 16px
+$spacing-md : 24px
+$spacing-lg : 48px
+$spacing-xl : 64px
+
+
+
+
 // Constantes
 $border-radius: 3px
-$padding: 24px
+$padding: $spacing-md
 
